# minesweeper

./: CMakeLists.txt  README.md
scripts/: build.sh  cleanup.sh  run.sh
